# pythonic-ddd

./: .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  run-docker.sh
db/: Dockerfile  db.sql  docker-compose.yml  populate.sql  run-docker.sh
db/tables/: user.sql  wallet.sql
src/: container.py  server.py  wsgi.py
src/config/: postgres.py
src/shared/infraestructure/controllers/: __init__.py  api_controller.py
src/shared/infraestructure/repositories/: GenericRepository.py  __init__.py
src/shared/infraestructure/services/: DBService.py  HTTPService.py  LoggerService.py  __init__.py
src/shared/utils/: Factory.py  __init__.py  decorators.py
src/user/: __init__.py
src/user/application/: GetUseCase.py  __init__.py  container.py
src/user/domain/: User.py
src/user/infraestructure/controllers/: __init__.py  user_controller.py
src/user/infraestructure/repositories/: UserRepository.py  __init__.py  container.py
src/wallet/: __init__.py
src/wallet/application/: CreateTransferUseCase.py  container.py
src/wallet/domain/: Wallet.py  __init__.py
src/wallet/infraestructure/controllers/: __init__.py  wallet_controller.py
src/wallet/infraestructure/repositories/: WalletRepository.py  __init__.py  container.py
