[tool.poetry]
name = "user-domain"
version = "0.1.0"
description = ""
authors = ["Alejandro Jurado <ajurado.93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "1.1.1"
sqlalchemy = "1.3.8"
psycopg2-binary = "2.8.3"
gunicorn = "19.9.0"

[tool.poetry.dev-dependencies]
pytest = "3.10.1"
pylint = "2.3.1"
autopep8 = "1.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
